[gd_scene load_steps=14 format=2]

[ext_resource path="res://Froge.tscn" type="PackedScene" id=1]
[ext_resource path="res://Images/stick.png" type="Texture" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Images/background.png" type="Texture" id=5]
[ext_resource path="res://Female.tscn" type="PackedScene" id=6]
[ext_resource path="res://Popup.tscn" type="PackedScene" id=7]
[ext_resource path="res://Audio/JungleTheme.ogg" type="AudioStream" id=8]
[ext_resource path="res://Audio/backgroundfrogs.ogg" type="AudioStream" id=9]
[ext_resource path="res://PredWarn.tscn" type="PackedScene" id=10]
[ext_resource path="res://Images/treebg.png" type="Texture" id=11]
[ext_resource path="res://Predator.tscn" type="PackedScene" id=12]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.150024, 174.848, 0, 0, 0, 0, -0.150024, -102.338 )
}

[node name="Main" type="Node"]
script = ExtResource( 3 )
Popup = ExtResource( 7 )
Silhouette = ExtResource( 10 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_left = 18.0386
margin_top = -361.205
margin_right = 58.0386
margin_bottom = -281.205
rect_scale = Vector2( 27, 35.2115 )
color = Color( 0.00784314, 0.054902, 0.0745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Sprite" parent="Background"]
position = Vector2( 548.875, 1041.4 )
scale = Vector2( 0.368323, 0.403114 )
texture = ExtResource( 5 )

[node name="Stick" type="Sprite" parent="Background"]
show_behind_parent = true
position = Vector2( 512.074, 1398.07 )
scale = Vector2( 0.385039, 0.490764 )
z_index = 1
texture = ExtResource( 2 )

[node name="BGTree" type="Sprite" parent="."]
position = Vector2( 547.968, 138.01 )
scale = Vector2( 0.369824, 0.397031 )
z_index = 1
texture = ExtResource( 11 )

[node name="Froge" parent="." instance=ExtResource( 1 )]
position = Vector2( 412.544, 928.692 )

[node name="Predator" parent="." instance=ExtResource( 12 )]
position = Vector2( -385.268, -225.745 )
collision_mask = 2147483648

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Female" parent="." instance=ExtResource( 6 )]
position = Vector2( -171.715, 2573.46 )

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="FemaleTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="PredCheck" type="Timer" parent="."]
wait_time = 2.0

[node name="PopupSpawn" type="Node2D" parent="."]
position = Vector2( 616.009, 635.036 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -8.0

[node name="FrogBGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -8.0

[node name="PredPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PredPathSpawn" type="PathFollow2D" parent="PredPath"]
position = Vector2( -0.150024, 174.848 )
rotation = -1.56747
rotate = false
[connection signal="body_entered" from="Froge" to="Froge" method="_on_Froge_body_entered"]
[connection signal="eaten" from="Froge" to="." method="GetEaten"]
[connection signal="reached" from="Froge" to="." method="GetMate"]
[connection signal="body_entered" from="Female" to="Female" method="_on_Female_body_entered"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="FemaleTimer" to="." method="_on_FemaleTimer_timeout"]
[connection signal="timeout" from="PredCheck" to="." method="_on_PredCheck_timeout"]
